<resources>

    <string name="app_name">DialogFragment-Example</string>

    <string name="label_logout">Log Out</string>
    <string name="msg_logout">Do you want to logout from the app?</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">Ok</string>
    <string name="msg_enter_details">Please Enter your Details</string>
    <string name="msg_hint_name">Enter Name</string>
    <string name="label_submit">Submit</string>
    <string name="label_simple_dialog">Simple Dialog</string>
    <string name="label_dialog_with_data">Dialog With Data</string>

</resources>